# MonefyCpp

./: .eslintrc.js  .gitignore  App.tsx  Monefy_Final_Project_Report.md  README.md  app.json  package-lock.json  package.json  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
backend/monefy-bank-api/: .env.example  CMakeLists.txt  README.md  docker-compose.yml
backend/monefy-bank-api/sql/: schema.sql
backend/monefy-bank-api/src/: email_sender.cpp  email_sender.hpp  main.cpp
cpp/: cards_core.cpp  cards_core.hpp  finance_core.cpp  finance_core.hpp  monefy_api.cpp  monefy_store.cpp  monefy_store.hpp
cpp/include/: monefy_core.h
docs/: Monefy_Final_Project_Report.md
ios/: Podfile
ios/MonefyCppRn/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  MonefyCoreModule.mm
ios/MonefyCppRn.xcodeproj/: project.pbxproj
ios/MonefyCppRn.xcworkspace/: contents.xcworkspacedata
src/: types.ts
src/api/: accountSecurity.ts  auth.ts  client.ts  feedback.ts  profile.ts
src/components/: AnimatedPressable.tsx  AppIcon.tsx  AppLockOverlay.tsx  AppSplash.tsx  BankCardVisual.tsx  CompactCardChip.tsx  CurrencyRatesPanel.tsx  DecorBackdrop.tsx  FinancialVisualCards.tsx  LanguagePicker.tsx  LoadingButtonContent.tsx  LoadingSpinner.tsx  PhoneCountryPicker.tsx  PinPadModal.tsx  PremiumTabBar.tsx  ProfileAccountsSection.tsx  ScreenLoading.tsx  TabBarIcon.tsx  VerificationCodeInput.tsx
src/config/: devApiHost.ts
src/constants/: banking.ts  categories.ts  categoryGlyphs.ts  languages.ts  (+2 more)
(+62 files in other folders)
